# grpc-demo

./: .clang-format  .gitignore  CMakeLists.txt
all/: CMakeLists.txt
cmake/: grpc.cmake  protoc.cmake
examples/: CMakeLists.txt  client.cpp  main.cpp  server.cpp
examples/proto/: CMakeLists.txt
include/async_grpc/: circular_q.h  common.h  executor.h  grpc_context.h  grpc_executor.h  rate.h  rpcs.h  try.h
patch/: grpc.patch  unifex.patch
src/: common.cpp  grpc_context.cpp  rate.cpp
standalone/: CMakeLists.txt  main.cpp
standalone/proto/: CMakeLists.txt
standalone/proto/cmake/: protoc.cmake  unifex.cmake
test/: CMakeLists.txt
test/src/: async_grpc.cpp
